css/style.css
body{
	margin:1%;
	padding:1%;
	font-size:150%;
	color: rgb(7, 106, 192);
	background-color: rgb(244, 236, 236);
}

h1{
	font-size: 2em; 
	font-weight: bold;
}

.active{
	background: white;
    text-decoration: underline;
	text-align: center;
}

.brief_intro {
    text-align: center;
    float: right;
}

.company_logo {
    float: right;
    height: 50px;
    width: auto
}


h2{
	font-size: 1em; 
	font-weight: bold;
}

/*Improve the spacing for paragraphs AND headings*/
p, h1, h2 {
    padding: 10px;
}

/*Add borders around the main components and some
space too*/
header, nav, main, footer{
	border: 3px solid red;
	margin: 20px 0;
}

img{
    height: 175px;
	width:auto;
    border: 3px solid rgb(13, 13, 19);
    padding: 3px;
    border-radius: 10px;
    margin: 10px;
}

nav li{
	background-color: #ECFF4D;
	padding:10px;
	width:25%;
	border:1px solid black;
	display: inline-block;
	width: 20%;
}

/*Added this so the links stay the same color*/
a:visited{color:#0000FF}

